--- a/_config.yml
+++ b/_config.yml
@@ -9,9 +9,8 @@
 title: Brian Lam
 email: brianlam93@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Hi, I'm Brian Lam. I am a software engineer at Facebook. Previously, I was a
+  student at Stanford University. I live and work in San Francisco. I am not
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://brianlam.io" # the base hostname & protocol for your site
 twitter_username: _brianlam
