--- a/eats/package.json
+++ b/eats/package.json
@@ -18,5 +18,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "homepage": "http://brianlam.io/eats"
+  "homepage": "http://lambrian.github.io/eats"
 }
