--- a/.github/workflows/npm-grunt.yml
+++ b/.github/workflows/npm-grunt.yml
@@ -1,25 +1,27 @@
 name: NodeJS with Grunt
 
 on:
-  push:
-    branches: [ "pages-src" ]
+    push:
+        branches: ['pages-src']
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+    build:
+        runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [18.x, 20.x, 22.x]
+        strategy:
+            matrix:
+                node-version: [18.x, 20.x, 22.x]
 
-    steps:
-    - uses: actions/checkout@v4
+        steps:
+            - uses: actions/checkout@v4
 
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ matrix.node-version }}
+            - name: Use Node.js ${{ matrix.node-version }}
+              uses: actions/setup-node@v4
+              with:
+                  node-version: ${{ matrix.node-version }}
 
-    - name: Build
-      run: |
-        npm run deploy
+            - name: Build
+              run: npm install
+
+            - name: Deploy
+              run: npm run deploy
