--- a/.github/workflows/npm-grunt.yml
+++ b/.github/workflows/npm-grunt.yml
@@ -24,6 +24,10 @@ jobs:
               run: npm install
 
             - name: Deploy
-              run: npm run deploy
               env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                  NAME: Brian Lam
+                  EMAIL: brianlam93@gmail.com
+              run: |
+                  git config --global user.email $EMAIL
+                  git config --global user.name $NAME
+                  npm run deploy
