--- a/.github/workflows/npm-grunt.yml
+++ b/.github/workflows/npm-grunt.yml
@@ -30,5 +30,5 @@ jobs:
               run: |
                   git config --global user.email $EMAIL
                   git config --global user.name $NAME
-                  git remote set-url origin https://$MY_NAME:${{ secrets.GITHUB_TOKEN }}@github.com/lambrian/lambrian.github.io.git
+                  git remote set-url origin https://$MY_NAME:${{ secrets.PAT_TOKEN }}@github.com/lambrian/lambrian.github.io.git
                   npm run deploy
