--- a/.github/workflows/npm-grunt.yml
+++ b/.github/workflows/npm-grunt.yml
@@ -25,7 +25,7 @@ jobs:
 
             - name: Deploy
               env:
-                  NAME: Brian Lam
+                  NAME: lambrian
                   EMAIL: brianlam93@gmail.com
               run: |
                   git config --global user.email $EMAIL
