--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         "start": "react-scripts start",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-        "build": "react-scripts build && cp build/index.html build/404.html"
+        "build": "react-scripts build && cp build/index.html build/404.html && echo \"$(date +\"%T\")\" > build/build-time.html"
     },
     "eslintConfig": {
         "extends": [
