--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "my-app",
+    "name": "blam-portolio",
     "homepage": "https://brianl.am/",
     "version": "0.1.0",
     "private": false,
@@ -22,9 +22,10 @@
         "predeploy": "npm run build",
         "deploy": "gh-pages -d build",
         "start": "react-scripts start",
-        "test": "react-scripts test",
+        "test": "set CI=true react-scripts test",
         "eject": "react-scripts eject",
-        "build": "react-scripts build && cp build/index.html build/404.html && echo \"$(date +\"%T\")\" > build/build-time.html"
+        "build": "react-scripts build && cp build/index.html build/404.html && echo \"$(date +\"%T\")\" > build/build-time.html",
+        "prepare": "husky install"
     },
     "eslintConfig": {
         "extends": [
@@ -45,6 +46,23 @@
         ]
     },
     "devDependencies": {
-        "gh-pages": "^6.2.0"
+        "eslint": "^8.57.1",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-prettier": "^5.2.1",
+        "gh-pages": "^6.2.0",
+        "husky": "^8.0.0",
+        "lint-staged": "^15.2.10",
+        "prettier": "^3.3.3"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "lint-staged"
+        }
+    },
+    "lint-staged": {
+        "*.{js,jsx,ts,tsx,json,css,scss,md}": [
+            "prettier --write",
+            "eslint --fix"
+          ]
     }
 }
