--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
         }
     },
     "lint-staged": {
-        "*.{js,jsx,ts,tsx,json,css,scss,md}": [
+        "*.{js,jsx,ts,tsx,md}": [
             "prettier --write",
             "eslint --fix"
           ]
