moved blog generation to subdir

--- a/brianl.am/package.json
+++ b/brianl.am/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "lambrian.github.io",
-    "homepage": "",
+    "name": "blam-portolio",
+    "homepage": "https://brianl.am/",
     "version": "0.1.0",
     "private": false,
     "dependencies": {
