dev: move blog generation to subdir (#75)

--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -19,6 +19,7 @@ jobs:
 
             - name: Build
               run: npm install
+              working-directory: brianl.am
 
             - name: Deploy
               env:
@@ -29,3 +30,4 @@ jobs:
                   git config --global user.name $NAME
                   git remote set-url origin https://$NAME:${{ secrets.PAT_TOKEN }}@github.com/lambrian/lambrian.github.io.git
                   npm run deploy
+              working-directory: brianl.am
