--- a/brianl.am/package.json
+++ b/brianl.am/package.json
@@ -24,8 +24,7 @@
         "start": "react-scripts start",
         "test": "set CI=true react-scripts test",
         "eject": "react-scripts eject",
-        "build": "react-scripts build && cp build/index.html build/404.html && echo `git rev-parse master` > build/build.html",
-        "prepare": "husky install"
+        "build": "react-scripts build && cp build/index.html build/404.html && echo `git rev-parse master` > build/build.html"
     },
     "eslintConfig": {
         "extends": [
