--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@ production
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+#Environment
+**/.env
+
 # dependencies
 **/node_modules
 /.pnp
