--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -5,7 +5,7 @@ on:
         branches:
             - master
     schedule:
-        - cron: 0 11 * * 1'
+        - cron: '0 11 * * 1'
 
 jobs:
     build:
