--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -4,7 +4,7 @@ on:
     push:
         branches:
             - master
-            - dev/augment-deploy-script
+            - fix-script
     schedule:
         - cron: '0 11 * * 0,1,2,3,4,5,6'
 
