--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -49,7 +49,8 @@ jobs:
               with:
                   python-version: 3.8 #install the python needed
             - name: Install dependencies
-                run: |
+              working-directory: queens-image-analysis
+              run: |
                   python -m pip install --upgrade pip
                   if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
