--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -45,13 +45,13 @@ jobs:
                   npm run download-board-img
 
             - name: setup python
-              uses: actions/setup-python@v2
+              uses: actions/setup-python@v3
               with:
                   python-version: 3.8 #install the python needed
             - name: Install dependencies
               working-directory: queens-image-analysis
               run: |
-                  python -m pip install --upgrade pip
+                  python3 -m pip install --upgrade pip
                   if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
             - name: Analyze Notion Board Data
