--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -4,7 +4,6 @@ on:
     push:
         branches:
             - master
-            - fix-script
     schedule:
         - cron: '0 11 * * 0,1,2,3,4,5,6'
 
@@ -74,3 +73,14 @@ jobs:
               run: |
                   echo "NOTION_TOKEN=$NOTION_TOKEN" > .env
                   npm run fetch-boards
+
+            - name: Deploy
+              working-directory: brianl.am
+              env:
+                  NAME: lambrian
+                  EMAIL: brianlam93@gmail.com
+              run: |
+                  git config --global user.email $EMAIL
+                  git config --global user.name $NAME
+                  git remote set-url origin https://$NAME:${{ secrets.PAT_TOKEN }}@github.com/lambrian/lambrian.github.io.git
+                  npm run deploy
