--- a/notion-data/package.json
+++ b/notion-data/package.json
@@ -10,6 +10,7 @@
     "download-board-img": "ts-node src/download-board-img.ts",
     "upload-boards": "ts-node src/upload-boards.ts",
     "fetch-boards": "ts-node src/fetch-boards.ts",
+    "add-boards": "ts-node src/add-boards.ts",
     "typecheck": "tsc --noEmit",
     "build": "tsc",
     "format": "prettier --write src/**/*.ts"
