--- a/brianl.am/package.json
+++ b/brianl.am/package.json
@@ -11,6 +11,7 @@
         "@types/node": "^16.18.114",
         "@types/react": "^18.3.11",
         "@types/react-dom": "^18.3.1",
+        "luxon": "^3.5.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-router-dom": "^6.27.0",
@@ -45,6 +46,7 @@
         ]
     },
     "devDependencies": {
+        "@types/luxon": "^3.4.2",
         "eslint": "^8.57.1",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-prettier": "^5.2.1",
