--- a/notion-data/package.json
+++ b/notion-data/package.json
@@ -11,6 +11,7 @@
     "upload-boards": "ts-node src/upload-boards.ts",
     "fetch-boards": "ts-node src/fetch-boards.ts",
     "add-boards": "ts-node src/add-boards.ts",
+    "scrape-li": "ts-node src/scrape-li-to-notion.ts",
     "typecheck": "tsc --noEmit",
     "build": "tsc",
     "format": "prettier --write src/**/*.ts"
@@ -20,12 +21,13 @@
   "dependencies": {
     "@notionhq/client": "^2.2.2",
     "dotenv": "^16.0.1",
-    "luxon": "^3.5.0"
+    "puppeteer": "^23.8.0"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
     "@types/luxon": "^3.4.2",
     "@types/node": "^18.0.3",
+    "luxon": "^3.5.0",
     "prettier": "^2.7.1",
     "ts-node": "^10.8.2",
     "typescript": "^4.7.4"
