--- a/brianl.am/package.json
+++ b/brianl.am/package.json
@@ -16,7 +16,6 @@
         "react-dom": "^18.3.1",
         "react-router-dom": "^6.27.0",
         "react-scripts": "5.0.1",
-        "typescript": "^4.9.5",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
@@ -53,7 +52,8 @@
         "gh-pages": "^6.2.0",
         "husky": "^8.0.0",
         "lint-staged": "^15.2.10",
-        "prettier": "^3.3.3"
+        "prettier": "^3.3.3",
+        "typescript": "^5.7.2"
     },
     "husky": {
         "hooks": {
